[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = "pet project to learn rest api and flask framework"
authors = ["Fateme Tardasti <fateme.tardasti@alexanderthamm.com>"]
readme = "README.md"
packages = [{include = "rest_api"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
